[metadata]
name = networking-openflow-l2
summary = Simple openflow l2 agent for Neutron
description-file =
	README.md
author = YiRen Chen
author-email = nobody@hostname.not.exist
classifier =
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[files]
packages =
	networking_openflow_l2

[entry_points]
neutron.ml2.mechanism_dirvers =
	openflow = networking_openflow_l2.mech_driver.mech_openflow:OpenFlowL2MechanismDriver

